# papergen

./: QUICKSTART.md  pyproject.toml
src/papergen/ai/: claude_client.py  multi_llm.py  openai_client.py
src/papergen/cli/: discover.py
src/papergen/discovery/: brainstorm.py
src/papergen/interactive/: input_handler.py  repl.py
